# cmake-visualstudio-msmpi

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  test.cpp
